--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
-* {
-  margin:0px;
-  padding:0px;
+html, body{
+  background: black;
 }
 
-#octocat {
-  display: block;
-  width:384px;
-  margin: 50px auto;
+.video-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-p {
-  display: block;
-  width: 400px;
-  margin: 50px auto;
-  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+.video-container>video:nth-of-type(2n){
+  filter: blur(3px);
+}
+.video-container>video:nth-of-type(3n){
+  filter: grayscale(80);
+}
+.video-container>video:nth-of-type(5n){
+  filter: sepia(50);
 }
